Update to VFS 2.0.0.Beta13. Hack the JPA url according to spec.
git-svn-id: https://svn.jboss.org/repos/jbossas/projects/ejb3/trunk@74099 84be2c1e-ba19-0410-b317-a758671a6fc1